kubernetes/apps/locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: locustio/locust:latest
        ports:
        - containerPort: 8089
        volumeMounts:
        - name: locust-file
          mountPath: /mnt/locust/
      volumes:
      - name: locust-file
        configMap:
          name: locust-file
---
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: apps
spec:
  selector:
    app: locust
  ports:
  - port: 8089
    targetPort: 8089
  type: NodePort
